<resources>
    <string name="app_name">RO Nature</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello Ami</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="update_profile_pic">Update Profile Picture</string>
    <string name="update_name">Update Name</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="add_photos">Add Photos</string>
    <string name="profile">Profile</string>
    <string name="title_activity_post_details">PostDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="people">People</string>
    <string name="more">more</string>
    <string name="edit">Edit</string>
    <string name="person_name">Person Name</string>
    <string name="person_email">Person Email</string>
    <string name="time">02/01/1990 06:19PM</string>
    <string name="delivered">Delivered</string>
    <string name="his_message">His Message</string>
    <string name="his_name">His Name</string>
    <string name="last_message">Last Message</string>
    <string name="chat">Chat</string>
</resources>