<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    <item
            android:id="@+id/nav_addphotos"
            android:icon="@drawable/ic_add"
            android:title="@string/add_photos" />

    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_people"
        android:title="@string/people" />

<!--    <item-->
<!--        android:id="@+id/nav_chat"-->
<!--        android:icon="@drawable/ic_email_white"-->
<!--        android:title="@string/chat" />-->

    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_white"
            android:title="@string/profile" />

</menu>
