<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/forest1"
		android:padding="20dp">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="87dp"
		android:text="@string/update_password"

		android:textAlignment="center"
		android:textColor="@color/colorWhite"
		android:textSize="30sp"
		android:textStyle="bold" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/oldpass"
		android:layout_width="match_parent"
		android:layout_height="82dp"
		android:textColorHint="@color/colorWhite"
		app:passwordToggleEnabled="true">

		<EditText
			android:id="@+id/oldpasslog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/rounded_edittext"
			android:hint="@string/old_password"
			android:inputType="textPassword" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/newpass"
		android:layout_width="match_parent"
		android:layout_height="82dp"
		android:textColorHint="@color/colorWhite"
		app:passwordToggleEnabled="true">

		<EditText
			android:id="@+id/newpasslog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/rounded_edittext"
			android:hint="@string/new_password"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/updatepass"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:backgroundTint="@color/colorGreen2"
		android:text="@string/update"
		android:textColor="@color/colorWhite" />

</LinearLayout>